<resources>
    <string name="app_name">LocSale</string>

    <string name="places_api_key">AIzaSyBaOBTubjq5TTtH5r7F4ZswkZmKAVU0IIg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="Logout">logout</string>
    <string name="send">Send</string>
    <string name="chat">Chat</string>
    <string name="send_message_here">Type Message Here…</string>
    <string name="version">1.0</string>
    <string name="device">android</string>
    <string name="resend">Resend</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP ?</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to :</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">Verify</string>
    <string name="categories">Categories</string>
    <string name="business">Business</string>
    <string name="search">Search...</string>
    <string name="no_data_available">No Data available</string>
    <string name="select_date">Select Date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="bio">Bio</string>
    <string name="select_your_address">Select Your Address</string>
    <string name="address">Address</string>
    <string name="current_location">Current Location</string>

</resources>